Fixed: Menus overlapping (z-index) when wrapped #36

--- a/css/navbar.menu.css
+++ b/css/navbar.menu.css
@@ -5,6 +5,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  z-index: 999;
 }
 #navbar-administration .navbar-box {
   display: block;
