--- a/css/navbar.module.css
+++ b/css/navbar.module.css
@@ -66,7 +66,7 @@
   vertical-align: baseline;
   visibility: visible;
   widows: 2;
-  z-index: 999;
+  z-index: auto;
   unicode-bidi: normal;
   white-space: normal;
   width: auto;
